kust/cluster/test/eu-data-tools/amqp-ct-storage/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: messaging
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 3.8.3-management-alpine
  name: rabbitmq-management-ui
spec:
  rules:
    - host: eu-data-rabbitmq.fcaus-te.autodata.tech
      http:
        paths:
          - backend:
              service:
                name: rabbitmq
                port:
                  name: management
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - eu-data-rabbitmq.fcaus-te.autodata.tech
      secretName: fcaus-wildcard
